tests/syntax_errors/sasha26_2.tl
-- test case 26.
-- Description : bad returns

-- Expected : '2'
require "ifj21" 
function me() : write
me()                 

